--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
            version="3.0">
 
+    <context-param>
+        <param-name>log4j-config-location</param-name>
+        <param-value>WEB-INF/log4j.properties</param-value>
+    </context-param>
+
 </web-app>
 
 
